--- a/LaRucheFront/src/app/Production/production-detail/production-detail.component.html
+++ b/LaRucheFront/src/app/Production/production-detail/production-detail.component.html
@@ -18,7 +18,6 @@
         </div>
 
         <div class="myForm">
-        
           <div class="mdp">            
             <label>Quantité : </label>              
             <label>Année :</label>     
@@ -50,13 +49,12 @@
             </select>              
       
           </div>
-          
-        
+        </div>
+        <div class="buttons">
           <input type="button" class ="btn1" value="Annuler" (click)="goToListProd()">
           <input type="button" class ="btn2" type="submit" value="Sauvegarder" [disabled]="prodForm.invalid" >
-          
-          
         </div>
+          
           
           
     </form>
