--- a/LaRucheFront/src/app/Production/production-detail/production-detail.component.scss
+++ b/LaRucheFront/src/app/Production/production-detail/production-detail.component.scss
@@ -162,6 +162,11 @@
     cursor: not-allowed;
   }
 
+  .btn2:hover {
+    background-color: #f47d24;
+    font-size: 16px;
+  }
+
   .buttons {
     display: flex;
     justify-content: center;
