--- a/LaRucheFront/src/app/Ruches/ruche-detail/ruche-detail.component.html
+++ b/LaRucheFront/src/app/Ruches/ruche-detail/ruche-detail.component.html
@@ -44,10 +44,10 @@
             </div>
             
             
-
+            <div class="buttons">
             <input type="button" class ="btn1" value="Annuler" (click)="goToListRuche()">
             <input type="button" class ="btn2" type="submit" value="Sauvegarder" [disabled]="rucheForm.invalid" >
-            
+            </div>
             
           </div>
           
