--- a/LaRucheFront/src/app/Ruches/ruche-detail/ruche-detail.component.scss
+++ b/LaRucheFront/src/app/Ruches/ruche-detail/ruche-detail.component.scss
@@ -4,6 +4,18 @@
   //La fonctionnalité CORB (Cross-Origin Read Blocking) a bloqué la réponse multi-origine https://fonts.google.com/specimen/Poppins ayant le type MIME text/html. Pour en savoir plus, rendez-vous sur https://www.chromestatus.com/feature/5629709824032768.
 
 
+  .wrapper {
+    margin: 0;
+    display: flex;
+    flex-grow: 1;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    height: 100vh;
+    background-color: #EDE8EC;
+    font-family: 'Glacial Indifference', sans-serif;
+  }
+
 h1 {
   margin-top: 30px; /* Add margin to the top equal to the height of the navigation bar */
   color: #33658A;
@@ -55,6 +67,8 @@ body {
   font-family: 'Glacial Indifference', sans-serif;
   display: grid;
   width: 40%;
+  max-width: 650px;
+  
 }
 
 .form-add input, label {
@@ -134,10 +148,9 @@ select{
   background-color: #F58F29;
 }
 
-.btn1:hover, .btn2:hover:not([disabled]){
-  background-color: #33658A;
+.btn1:hover{
+  background-color: #2B414F;
   font-size: 16px;
-  font-weight: bold;
   border: none;
   color: whitesmoke;
   font-family: 'Poppins', sans-serif, medium;
@@ -150,4 +163,18 @@ select{
 .btn2[disabled] {
   opacity: 0.5;
   cursor: not-allowed;
+}
+
+.btn2:hover {
+  background-color: #f47d24;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.buttons {
+  display: flex;
+  justify-content: center;
+  margin-right: 15px;
+  gap: 20px;
+
 }
