--- a/LaRucheFront/src/app/accueil/accueil.component.scss
+++ b/LaRucheFront/src/app/accueil/accueil.component.scss
@@ -45,7 +45,7 @@ main {
   text-align: left; /* align text to left */
   flex-grow: 1;
 }
-.message_content .top .left .icon {
+.message_content .left .icon {
   width: 50px;
   height: 50px;
 }
