--- a/LaRucheFront/src/app/accueil/accueil.component.html
+++ b/LaRucheFront/src/app/accueil/accueil.component.html
@@ -25,12 +25,9 @@
 
 
 						<div class="right">
-							<ng-container *ngIf="listRucheVulnerabilite.length > 0; else noVulnerabiliteButton">
+							<ng-container *ngIf="listRucheVulnerabilite.length > 0">
 							<button (click)="goToRucheVulnerables()">Voir mes vulnérabilités</button>
 							</ng-container>
-							<ng-template #noVulnerabiliteButton>
-								<button (click)="goToRuche()">Voir mes ruches</button>
-							</ng-template>
 						</div>
 					</div>
 					
@@ -49,15 +46,12 @@
 						</div>
 
 						<div class="right">
-							<ng-container *ngIf="listRucheNourissage.length > 0; else noNourissageButton">
+							<ng-container *ngIf="listRucheNourissage.length > 0">
 								<button (click)="goToRucheN()">Voir 
 									<ng-container *ngIf="listRucheNourissage.length === 1">ma ruche</ng-container>
 									<ng-container *ngIf="listRucheNourissage.length > 1">mes ruches</ng-container>
 									à nourrir</button>
 							</ng-container>
-							<ng-template #noNourissageButton>
-								<button (click)="goToRuche()">Voir mes ruches</button>
-							</ng-template>
 						</div>
 					</div>	
 
