--- a/LaRucheFront/src/app/accueil/accueil.component.html
+++ b/LaRucheFront/src/app/accueil/accueil.component.html
@@ -71,7 +71,7 @@
 						</div>
 
 						<div class="right">
-							<button (click)="goToRucheN()">Voir 
+							<button (click)="goToRucheDiviser()">Voir 
 								<ng-container *ngIf="listRucheNourissage.length === 1">ma ruche</ng-container>
 									<ng-container *ngIf="listRucheNourissage.length > 1">mes ruches</ng-container>
 									à diviser</button>
