--- a/LaRucheFront/src/app/Production/production-detail/production-detail.component.html
+++ b/LaRucheFront/src/app/Production/production-detail/production-detail.component.html
@@ -40,7 +40,7 @@
 
             <select formControlName="produit">
               <option disabled selected value="">Sélectionner un produit</option>
-              <option *ngFor="let produit of produit" [value]="produit">{{produit}}</option>
+              <option *ngFor="let produit of produit" [value]="produit">{{produit | gelee}} </option>
             </select>
 
             <select formControlName="recolteurId">
