disallow diviser for recolteur

--- a/LaRucheFront/src/app/Ruches/liste-ruches/liste-ruches.component.html
+++ b/LaRucheFront/src/app/Ruches/liste-ruches/liste-ruches.component.html
@@ -31,7 +31,7 @@
               <td>
                 <button (click)="goToEdit(ruche.id)" class="edit-btn">Modifier</button>
                 <button *ngIf="allowed()" (click)="remove(ruche.id)" class="delete-btn">Supprimer</button>
-                <button *ngIf="ruche.cadre > 5" (click)="Division(ruche.id)" class="divise-btn">Diviser</button>
+                <button *ngIf="allowed() && ruche.cadre > 5" (click)="Division(ruche.id)" class="divise-btn">Diviser</button>
               </td>
             </tr>
           </tbody>
