--- a/LaRucheFront/src/app/accueil/accueil.component.html
+++ b/LaRucheFront/src/app/accueil/accueil.component.html
@@ -58,11 +58,11 @@
 					<!-- A CHANGER POUR DIVISER -->
 					<div class="bot">
 						<div class="left">
-							<ng-container *ngIf="listRucheNourissage.length > 0; else noDivision">
+							<ng-container *ngIf="listRucheDivision.length > 0; else noDivision">
 								<p><img src="/assets/home_gestionnaire/icone-danger.png" class="icon">Vous avez
-									{{listRucheNourissage.length}}
-									<ng-container *ngIf="listRucheNourissage.length === 1">ruche</ng-container>
-									<ng-container *ngIf="listRucheNourissage.length > 1">ruches</ng-container>
+									{{listRucheDivision.length}}
+									<ng-container *ngIf="listRucheDivision.length === 1">ruche</ng-container>
+									<ng-container *ngIf="listRucheDivision.length > 1">ruches</ng-container>
 								 à diviser</p>
 							</ng-container>
 							<ng-template #noDivision>
@@ -72,8 +72,8 @@
 
 						<div class="right">
 							<button (click)="goToRucheDiviser()">Voir 
-								<ng-container *ngIf="listRucheNourissage.length === 1">ma ruche</ng-container>
-									<ng-container *ngIf="listRucheNourissage.length > 1">mes ruches</ng-container>
+								<ng-container *ngIf="listRucheDivision.length === 1">ma ruche</ng-container>
+									<ng-container *ngIf="listRucheDivision.length > 1">mes ruches</ng-container>
 									à diviser</button>
 						</div>
 					</div>
