--- a/LaRucheFront/src/app/navbar/navbar.component.html
+++ b/LaRucheFront/src/app/navbar/navbar.component.html
@@ -47,7 +47,7 @@
                 <a [routerLink]="['unbeelievable/ruche']" routerLinkActive="active" class="alignIconeWithText">
                 <img src="assets/navbar/ruche-b.png" alt="logo" class="iconesMenu" *ngIf="sourisC==false">
                 <img src="assets/navbar/ruche-o.png" alt="logo" class="iconesMenu" *ngIf="sourisC==true">
-                Mes Ruches</a>
+                Mes ruches</a>
               </li>
             </div>  
          
