remove annee input

--- a/LaRucheFront/src/app/Production/production-detail/production-detail.component.html
+++ b/LaRucheFront/src/app/Production/production-detail/production-detail.component.html
@@ -11,7 +11,7 @@
         <div class="myForm">
           <div class="mdp">            
             <label  class="label-wrapper">Quantité : </label>              
-            <label>Année :</label>     
+            <!-- <label>Année :</label>   -->   
             <label>Ruche id :</label>   
             <label>Prix au kg :</label>
             <label>Produit :</label> 
@@ -22,7 +22,7 @@
             <input name="stock" type="number" formControlName="stock" [value]="prodForm.get('stock').value" class="form-input">
               
             
-            <input name="annee" type="date" formControlName="annee" [value]="prodForm.get('annee').value">
+            <!-- <input name="annee" type="date" formControlName="annee" [value]="prodForm.get('annee').value"> -->
 
             <select formControlName="rucheId">
                 <option disabled selected value="">Sélectionner une ruche</option>
